# Sales-Sherlock

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  sherlock.lnk  vercel.json
api/: health.py  render.py  research.py  search.py  section.py
docs/: enterprise.md  how-it-works.md  prompt-customization.md
examples/: sample-brief.md  sample-linkedin-paste.txt
public/: app.js  index.html
src/sherlock/: __init__.py  cli.py  dossier.py  researcher.py  validation.py
src/sherlock/prompts/: 00_executive_read.md  01_company_overview.md  01_tldr.md  02_company_history.md  02_company_snapshot.md  03_investment_ownership.md  03_person_role.md  04_growth_revenue_signals.md  04_three_things.md  05_industry_competitive.md  05_opening_questions.md  06_contact_professional.md  06_discovery_questions.md  07_contact_personal.md  07_risk_flag.md  08_psychographic.md  09_hooks_and_risks.md  __init__.py
src/sherlock/render/: __init__.py  executive.py  html.py  markdown.py
src/sherlock/sources/: __init__.py  apollo.py  funding.py  interviews.py  jobs.py  linkedin.py  linkedin_company.py  news.py  web.py  web_search.py
