[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sherlock-brief"
version = "0.1.0"
description = "Pre-call research briefs for revenue teams. Free, open-source, built on Claude."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tony Bangert", email = "tony@performancelabs.ai" },
]
keywords = [
    "sales",
    "prospecting",
    "pre-call",
    "research",
    "claude",
    "anthropic",
    "ai",
    "revenue",
    "go-to-market",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
sherlock = "sherlock.cli:app"

[project.urls]
Homepage = "https://github.com/tonybangert/sherlock"
Issues = "https://github.com/tonybangert/sherlock/issues"
"PerformanceLabs.AI" = "https://performancelabs.ai"

[tool.hatch.build.targets.wheel]
packages = ["src/sherlock"]

[tool.hatch.build.targets.wheel.force-include]
"src/sherlock/prompts" = "sherlock/prompts"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
